# flapping_platform

./: .gitignore  README.md  ROS2_MoveIt_控制链路详解.md
src/experiment/: CMakeLists.txt  package.xml
src/experiment/data/: force_data_20260407_173343.csv
src/experiment/launch/: control.launch.py  data_collection.launch.py
src/experiment/scripts/: experiment_gui.py  force_visualizer.py
src/experiment/src/: experiment_control.cpp  force_collector.cpp
src/flapping_platform/flapping_platform_bringup/: CMakeLists.txt  package.xml
src/flapping_platform/flapping_platform_bringup/launch/: flapping_platform_bringup.launch.py
src/flapping_platform/flapping_platform_bringup/scripts/: flapping_platform_gazebo.sh  flapping_platform_gz_moveit.sh  turntable_control.py
src/flapping_platform/flapping_platform_description/: CMakeLists.txt  package.xml
src/flapping_platform/flapping_platform_description/launch/: display.launch.py  robot_state_publisher.launch.py  robot_state_publisher_gazebo.launch.py  robot_state_publisher_real.launch.py
src/flapping_platform/flapping_platform_description/meshes/platform/: plate.STL
src/flapping_platform/flapping_platform_description/urdf/control/: flapping_platform.ros2_control.xacro  flapping_platform_mock.ros2_control.xacro  gazebo_sim_ros2_control.urdf.xacro
src/flapping_platform/flapping_platform_description/urdf/mech/: joint.urdf.xacro  platform.urdf.xacro  rml_63.urdf.xacro
src/flapping_platform/flapping_platform_description/urdf/robots/: flapping_platform.urdf  flapping_platform.urdf.xacro  flapping_platform.urdfcopy.xacro  flapping_platform_gazebo.urdf.xacro  flapping_platform_real.urdf.xacro
src/flapping_platform/flapping_platform_gazebo/: CMakeLists.txt  package.xml
src/flapping_platform/flapping_platform_gazebo/config/: ros_gz_bridge.yaml
src/flapping_platform/flapping_platform_gazebo/launch/: flapping_platform.gazebo.launch.py
src/flapping_platform/flapping_platform_gazebo/worlds/: empty.world
src/flapping_platform/flapping_platform_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/flapping_platform/flapping_platform_moveit_config/config/flapping_platform/: initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml  ros2_controllers_template.yaml
src/flapping_platform/flapping_platform_moveit_config/config/flapping_platform_real/: flapping_platform_real.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers_real.yaml  ros2_controllers.yaml
src/flapping_platform/flapping_platform_moveit_config/config/gazebo/: flapping_platform.srdf  kinematics.yaml  moveit_controllers.yaml
src/flapping_platform/flapping_platform_moveit_config/config/real/: initial_positions.yaml
src/flapping_platform/flapping_platform_moveit_config/launch/: demo_moveit.launch.py  gazebo_moveit.launch.py  load_ros2_controllers.launch.py  mock_moveit.launch.py  move_group.launch.py  real_moveit.launch.py
src/flapping_platform/flapping_platform_moveit_config/src/: vertical_move_demo.cpp
src/flapping_platform/flapping_platform_ros2/: CMakeLists.txt  README.md  package.xml
src/flapping_platform/flapping_platform_sensor_interface/: CMakeLists.txt  package.xml
src/flapping_platform/flapping_platform_sensor_interface/scripts/: joint_state_merger.py
src/flapping_platform/flapping_platform_system_tests/: CMakeLists.txt  package.xml
src/ros2_rm_robot-humble/rm_driver/config/: rm_63_config.yaml
src/ros2_rm_robot-humble/rm_driver/src/: rm_driver.cpp
src/ros2_rm_robot-humble/rm_install/scripts/: moveit2_install.err  ros2_humble_install.err
src/ros2_rm_robot-humble/rm_moveit2_config/rm_63_config/launch/: demo_flapping_platform.launch.py
