<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flapping_platform_ros2</name>
  <version>0.0.0</version>
  <description>flapping_platform_metapackage</description>
  <maintainer email="dzy@dzy.com">ubuntu</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>flapping_platform_bringup</exec_depend>
  <exec_depend>flapping_platform_description</exec_depend>
  <exec_depend>flapping_platform_gazebo</exec_depend>
  <exec_depend>flapping_platform_moveit_config</exec_depend>
  <exec_depend>flapping_platform_system_tests</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
